--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
     THIS IS THE END OF A COMMENT BLOCK, BLOCK TO BE DELETED -->
   </head>
+<link rel="icon" type="image/png" href="/logo-nkridari.png" />
 
   <body>
     <div id="root"></div>
